Changed Default Properties of Memoranda.

--- a/src/net/sf/memoranda/util/resources/memoranda.default.properties
+++ b/src/net/sf/memoranda/util/resources/memoranda.default.properties
@@ -5,13 +5,13 @@
 DISABLE_L10N = no
 
 # GUI L&F (system | default* | {CustomClassName})
-LOOK_AND_FEEL = default
+LOOK_AND_FEEL = system
 
 # Disable system tray feature (yes | no*)
-DISABLE_SYSTRAY = no
+DISABLE_SYSTRAY = yes
 
 # Action on window closing (exit | minimize*)
-ON_CLOSE = minimize
+ON_CLOSE = exit
 
 # Action on window minimizing (normal*)
 ON_MINIMIZE = normal
